fix wipe overlapping featured image on animation

--- a/themes/fullstackdigital/assets/scss/critical/work/_grid_item.scss
+++ b/themes/fullstackdigital/assets/scss/critical/work/_grid_item.scss
@@ -214,6 +214,9 @@
     .wipe {
       z-index: 888;
     }
+    .gridgrow-image, .gridgrow-image-holder, .gridwrap {
+      z-index: 899;
+    }
   }
   @media screen and (max-width: $screen-desktop-s) {
     .gridgrow {
